--- a/platformio.ini
+++ b/platformio.ini
@@ -15,12 +15,11 @@ src_dir = .
 framework = arduino
 lib_deps =
 	bblanchon/ArduinoJson@^6.20.0
+	ESP Async WebServer
 
 monitor_speed = 115200
 
 [env:EzSBC]
 platform = espressif32
 board = esp32dev
-; Commented out for now to match the Arduino settings in the readme,
-; but may be needed in the future
-; board_build.partitions = huge_app.csv
+board_build.partitions = huge_app.csv
