--- a/app/package.json
+++ b/app/package.json
@@ -1,23 +1,23 @@
 {
-    "name": "svelte-app",
+    "name": "calendar-setup",
     "version": "1.0.0",
     "type": "module",
     "devDependencies": {
-        "@sveltejs/vite-plugin-svelte": "^2.0.4",
-        "@tsconfig/svelte": "^4.0.1",
+        "@sveltejs/vite-plugin-svelte": "^2.4.3",
+        "@tsconfig/svelte": "^5.0.0",
         "@types/node": "^18.15.13",
         "classnames": "^2.3.2",
-        "flowbite": "^1.6.5",
+        "flowbite": "^1.7.0",
         "postcss": "^8.4.23",
-        "postcss-preset-env": "^8.3.2",
+        "postcss-preset-env": "^9.1.0",
         "rollup-plugin-visualizer": "^5.9.0",
-        "svelte": "^3.58.0",
-        "svelte-check": "^3.2.0",
-        "svelte-preprocess": "^5.0.0",
+        "svelte": "^4.1.1",
+        "svelte-check": "^3.4.6",
+        "svelte-preprocess": "^5.0.4",
         "tailwindcss": "^3.3.1",
-        "tslib": "^2.5.0",
-        "typescript": "^5.0.4",
-        "vite": "^4.3.1",
+        "tslib": "^2.6.1",
+        "typescript": "^5.1.6",
+        "vite": "^4.4.7",
         "vite-plugin-compression": "^0.5.1",
         "vite-plugin-singlefile": "^0.13.5"
     },
