--- a/app/package.json
+++ b/app/package.json
@@ -3,23 +3,21 @@
     "version": "1.0.0",
     "type": "module",
     "devDependencies": {
-        "@sveltejs/vite-plugin-svelte": "^2.4.3",
-        "@tsconfig/svelte": "^5.0.0",
+        "@sveltejs/vite-plugin-svelte": "^4.0.0-next.7",
         "@types/node": "^18.15.13",
         "classnames": "^2.3.2",
-        "flowbite": "^2.2.0",
-        "postcss": "^8.4.23",
-        "postcss-preset-env": "^9.3.0",
-        "rollup-plugin-visualizer": "^5.9.0",
-        "svelte": "^4.2.8",
-        "svelte-check": "^3.6.2",
-        "svelte-preprocess": "^5.1.1",
-        "tailwindcss": "^3.3.1",
-        "tslib": "^2.6.1",
-        "typescript": "^5.3.3",
-        "vite": "^4.4.7",
+        "flowbite": "^2.4.1",
+        "postcss": "^8.4.39",
+        "postcss-preset-env": "^9.6.0",
+        "rollup-plugin-visualizer": "^5.12.0",
+        "svelte": "5.0.0-next.262",
+        "svelte-check": "^4.0.4",
+        "tailwindcss": "^3.4.6",
+        "tslib": "^2.6.3",
+        "typescript": "^5.5.3",
+        "vite": "^5.4.8",
         "vite-plugin-compression": "^0.5.1",
-        "vite-plugin-singlefile": "^0.13.5"
+        "vite-plugin-singlefile": "^2.0.2"
     },
     "scripts": {
         "dev": "vite --host 0.0.0.0 --port 8080",
