--- a/platformio.ini
+++ b/platformio.ini
@@ -14,8 +14,8 @@ src_dir = .
 [env]
 framework = arduino
 lib_deps =
-	bblanchon/ArduinoJson@^7.2.0
-	ESP Async WebServer
+	bblanchon/ArduinoJson@7.4.1
+	esp32async/ESPAsyncWebServer@3.7.7
 
 monitor_speed = 115200
 
